--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
 <html>
+    <body>
+        <h1>A Wizard Appears!</h1>
+    <svg width="600" height="300">
+        <circle cx="500" cy="200" r="80" fill="rgba(255, 204, 153)"></circle>
+            <ellipse cx="455" cy="180" rx="10" ry="15" fill="black"></ellipse>
+            <ellipse cx="545" cy="180" rx="10" ry="15" fill="black"></ellipse>
+            <circle cx="500" cy="230" r="15" fill="red"></circle>
+        <polygon points="450,130 550,130 500,30" style="fill:purple;stroke:purple;stroke-width:1"/>
+            <rect x="425" y="130" width="150" height="12" fill="purple"></rect>
+            <circle cx="489" cy="120" r="7" fill="yellow"></circle>
+            <circle cx="503" cy="84" r="14" fill="yellow"></circle>
+            <circle cx="520" cy="110" r="10" fill="yellow"></circle>
+    </svg>
+        <h1>What is a Scale?</h1>
+        <p>By Mike Bostock's definition of D3 scales, he statest they are "functions that map from an input domain to an output range." To be more exact they are numbers that will help map the data values so they fit our own visualization purposes. One such scale we use frequently is for pixels. If we use a scale we can represent just how many pixels is equal to something else (in the book they used apples as an example). This is useful as it allows us to change how certain things are represented, in visuals this is everything as, with pixels, there are certain amounts in diffferent sizes of computer screens.</p>
+    </body>
 </html>
